# strongswan-vpp

./: configure.ac
conf/: format-options.py
conf/options/: charon.opt
deploy/make_cert/: create_cert_roadwarrior.sh  create_cert_site_to_site.sh
deploy/scenario/roadwarrior/: install.sh
deploy/scenario/roadwarrior/carol/: swanctl.conf
deploy/scenario/roadwarrior/moon/: swanctl.conf
deploy/scenario/site2site/: install.sh
deploy/scenario/site2site/moon/: swanctl.conf
deploy/scenario/site2site/sun/: swanctl.conf
scripts/: .gitignore  Makefile.am  dnssec.c  nist_kem_kat.c  test.sh
src/charon-cmd/: charon-cmd.c
src/charon-nm/nm/: nm_backend.c  nm_service.c
src/charon-tkm/src/tkm/: tkm_keymat.c
src/charon-tkm/tests/: keymat_tests.c
src/dumm/: cowfs.c  dumm.c  guest.c
src/dumm/ext/: dumm.c
src/dumm/patches/: mconsole-exec-2.6.28.patch
src/frontends/gnome/: Makefile.am  NEWS  configure.ac
src/libcharon/: Android.mk  Makefile.am
src/libcharon/bus/: bus.h
src/libcharon/config/: child_cfg.c  child_cfg.h  ike_cfg.c  ike_cfg.h  peer_cfg.c  peer_cfg.h
src/libcharon/control/: controller.c
src/libcharon/encoding/: message.c
src/libcharon/encoding/payloads/: ike_header.c  ike_header.h  notify_payload.c  notify_payload.h  payload.c  payload.h  proposal_substructure.c  qske_payload.c  qske_payload.h
src/libcharon/plugins/connect/: Makefile.am  connect.c  connect_msg.h  connect_plugin.c  connect_plugin.h  connect_socket.c  connect_socket.h
src/libcharon/plugins/eap_radius/: eap_radius_accounting.c
src/libcharon/plugins/ha/: ha_dispatcher.c
src/libcharon/plugins/kernel_vpp/: kernel_vpp_ipsec.c  kernel_vpp_net.c  kernel_vpp_shared.c
src/libcharon/plugins/maemo/: maemo_service.c
src/libcharon/plugins/socket_vpp/: socket_vpp_socket.c
src/libcharon/sa/: authenticator.h  ike_sa.c  ike_sa.h  ike_sa_manager.c  ike_sa_manager.h  task_manager.h  trap_manager.c
src/libcharon/tests/: Makefile.am
src/libimcv/pts/: pts.c
src/libipsec/: ipsec_event_listener.h  ipsec_event_relay.c  ipsec_event_relay.h
src/libstrongswan/: Android.mk  Makefile.am  library.c
src/libstrongswan/bio/: bio_reader.c
src/libstrongswan/collections/: array.c
src/libstrongswan/crypto/: crypto_factory.c  crypto_factory.h  crypto_tester.c  crypto_tester.h  key_exchange.c  key_exchange.h  qske_mechanism.c  qske_mechanism.h  transform.c  transform.h
src/libstrongswan/networking/: tun_device.c
src/libstrongswan/plugins/: plugin_feature.c  plugin_feature.h
src/libstrongswan/plugins/cng/: Makefile.am  cng_crypter.c  cng_crypter.h  cng_dh.c  cng_dh.h  cng_hasher.c  cng_hasher.h  cng_plugin.c  cng_plugin.h
src/libstrongswan/plugins/oqs/tests/: Makefile.am  oqs_tests.h
src/libstrongswan/plugins/oqs/tests/suites/: test_oqs.c  test_oqs_kat.c  test_oqs_kat_bike1_l1.h  test_oqs_kat_bike1_l3.h  test_oqs_kat_bike1_l5.h  test_oqs_kat_bike2_l1.h  test_oqs_kat_bike2_l3.h  test_oqs_kat_bike2_l5.h  test_oqs_kat_bike3_l1.h  test_oqs_kat_bike3_l3.h  test_oqs_kat_bike3_l5.h  test_oqs_kat_frodo_aes_l1.h  test_oqs_kat_frodo_aes_l3.h  test_oqs_kat_frodo_shake_l1.h  test_oqs_kat_frodo_shake_l3.h  test_oqs_kat_kyber_l1.h  test_oqs_kat_kyber_l3.h  test_oqs_kat_kyber_l5.h  test_oqs_kat_lima_2p_l3.h  test_oqs_kat_lima_2p_l5.h  test_oqs_kat_lima_sp_l1.h  test_oqs_kat_lima_sp_l2.h  test_oqs_kat_lima_sp_l3.h  test_oqs_kat_lima_sp_l5.h  test_oqs_kat_newhope_l1.h  test_oqs_kat_newhope_l5.h  test_oqs_kat_saber_l1.h  test_oqs_kat_saber_l3.h  test_oqs_kat_saber_l5.h  test_oqs_kat_sike_l1.h  test_oqs_kat_sike_l3.h
src/libstrongswan/plugins/qske_newhope/: Makefile.am  qske_newhope.c  qske_newhope.h  qske_newhope_noise.c  qske_newhope_noise.h  qske_newhope_plugin.c  qske_newhope_plugin.h  qske_newhope_reconciliation.c  qske_newhope_reconciliation.h
src/libstrongswan/plugins/qske_newhope/tests/: .gitignore  Makefile.am  qske_newhope_tests.c  qske_newhope_tests.h
src/libstrongswan/plugins/qske_newhope/tests/suites/: test_qske_newhope.c  test_qske_newhope_noise.c  test_qske_newhope_reconciliation.c
src/libstrongswan/resolver/: resolver_response.h
src/libstrongswan/settings/: layered_settings.h  settings_parser.y
src/libstrongswan/tests/: test_runner.c
src/libstrongswan/threading/: mutex.c
src/libstrongswan/utils/: utils.h
src/libtls/: tls_crypto.c
src/pki/commands/: req.c
src/swanctl/: Makefile.am  ipsec2swanctl.pl  swanctl.opt
src/swanctl/commands/: list_sas.c
testing/: .gitignore  make-testing.rb
testing/config/: default.yml
testing/lib/: config.rb  console_format.rb  guest_config.rb  kernel_config.rb  strongswan_config.rb  testing.rb
testing/scripts/: build-baseimage
testing/scripts/recipes/: 011_liboqs.mk  013_strongswan.mk
(+102 files in other folders)
